@@ -1805,6 +1805,20 @@ class RepositoryPackCollection(object):
         self.repo._text_knit = None
 
     def _commit_write_group(self):
+        all_missing = set()
+        for prefix, versioned_file in (
+                ('revisions', self.repo.revisions),
+                ('inventories', self.repo.inventories),
+                ('texts', self.repo.texts),
+                ('signatures', self.repo.signatures),
+                ):
+            # We use KnitVersionedFiles exclusively so can rely on _index.
+            missing = versioned_file._index.get_missing_compression_parents()
+            all_missing.update([(prefix,) + key for key in missing])
+        if all_missing:
+            raise errors.BzrCheckError(
+                "Repository %s has missing compression parent(s) %r "
+                 % (self.repo, sorted(all_missing)))
         self._remove_pack_indices(self._new_pack)
         if self._new_pack.data_inserted():
             # get all the data to disk and read to use
@@ -1971,13 +1985,6 @@ class KnitPackRepository(KnitRepository):
         self._pack_collection._start_write_group()
 
     def _commit_write_group(self):
-        vfs = [self.revisions, self.inventories, self.texts, self.signatures]
-        for vf in vfs:
-            missing = vf._index.get_missing_compression_parents()
-            if missing:
-                raise errors.BzrCheckError(
-                    "Repository %s has missing compression parent(s) %r "
-                    "in %r" % (self, list(missing), vf))
         return self._pack_collection._commit_write_group()
 
     def get_transaction(self):
