@@ -52,6 +52,12 @@ IN DEVELOPMENT
       command object before the command is run (or help generated from
       it), without overriding the command. (Robert Collins)
 
+    * The ``_index`` of ``KnitVersionedFiles`` now supports the ability
+      to scan an underlying index that is going to be incorporated into
+      the ``KnitVersionedFiles`` object, to determine if it has missing
+      delta references. The method is ``scan_unvalidated_index``.
+      (Andrew Bennetts, Robert Collins)
+
 
 bzr 1.12 "1234567890" 2009-02-13
 --------------------------------
